[package]
name = "iram"
version = "0.1.0"
authors = ["Tarun Wadhwa <tarunwadhwa13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6.1"
jwt-simple = "0.11.0"
actix-web-httpauth = "0.6.0"
config = "0.13.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
chrono = "0.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric"] }
juniper = "0.15.7"
bcrypt = "0.10.1"
bigdecimal = "0.1.2"