[package]
name = "iram"
version = "0.1.0"
authors = ["Tarun Wadhwa <tarunwadhwa13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
jwt-simple = "0.11.2"
actix-web-httpauth = "0.8.0"
config = "0.13.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric"] }
juniper = "0.15.10"
bcrypt = "0.13.0"
bigdecimal = "0.3.0"