[package]
name = "iram"
version = "0.1.0"
authors = ["Tarun Wadhwa <tarunwadhwa13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.7.0"
jwt-simple = "0.12.10"
actix-web-httpauth = "0.8.0"
config = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric"] }
juniper = "0.16.1"
bcrypt = "0.15.1"
bigdecimal = "0.4.6"